Change to appsettings.json file

--- a/SocialNetwork/appsettings.json
+++ b/SocialNetwork/appsettings.json
@@ -10,11 +10,11 @@
     }
   },
   "MailSettings": {
-    "EmailFrom": "testmotasilverio@gmail.com",
+    "EmailFrom": "",
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": 587,
-    "SmtpUser": "testmotasilverio@gmail.com",
-    "SmtpPass": "fuvwfevvhxyrzeco",
+    "SmtpUser": "",
+    "SmtpPass": "",
     "DisplayName": "Social Network mail"
   },
   "AllowedHosts": "*"
